Fixed a few responsive problems on mobile removing fixed value from .cards class and using %

--- a/html-templates/Responsive/style.css
+++ b/html-templates/Responsive/style.css
@@ -36,6 +36,13 @@ main>section {
     margin-left:20px;
 }
 
+
+@media only screen and (max-width:599px) {
+    main>section {
+        margin-left:5px;
+    }
+}
+
 main>footer{
     background-color:#222;
     padding:10px;
